This is what I wanted it to do. NICE working version starts here~

--- a/src/sass/app_style_manifest.scss
+++ b/src/sass/app_style_manifest.scss
@@ -1,5 +1,8 @@
-@import 
+@import
   "lib/mixins",
   "lib/reset",
+  "lib/base",
+  "lib/skeleton",
 
-  "app/base";
+  "app/variables",
+  "app/layout";
