--- a/src/sass/app_style_manifest.scss
+++ b/src/sass/app_style_manifest.scss
@@ -1,8 +1,14 @@
 @import
   "lib/mixins",
   "lib/reset",
+  "lib/fonts",
   "lib/base",
   "lib/skeleton",
+  "lib/icons",
+  "lib/animation",
 
   "app/variables",
-  "app/layout";
+  "app/layout",
+  "app/main_nav",
+  "app/header",
+  "app/store";
