--- a/src/sass/lib/base.scss
+++ b/src/sass/lib/base.scss
@@ -13,8 +13,8 @@
 // #Basic Styles
 body {
   background: #fff;
-  font: 15px/24px "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #444;
+  font: 20px/1.6em  "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #555;
 
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
@@ -28,13 +28,10 @@ body {
 // #Typography
 h1, h2, h3, h4, h5, h6 {
   color: #181818;
-  font-family: "Georgia", "Times New Roman", serif;
-  font-weight: normal;
-
   a { font-weight: inherit; }
 }
 
-h1 { font-size: 46px; line-height: 50px; margin-bottom: 14px;}
+h1 { font-size: 50px; line-height: 50px; margin-bottom: 14px;}
 h2 { font-size: 35px; line-height: 40px; margin-bottom: 10px; }
 h3 { font-size: 28px; line-height: 34px; margin-bottom: 8px; }
 h4 { font-size: 21px; line-height: 30px; margin-bottom: 4px; }
@@ -44,7 +41,7 @@ h6 { font-size: 14px; line-height: 21px; }
 .subheader { color: #777; }
 
 p {
-  margin: 0 0 20px 0;
+  margin: 0 0 1.6em 0;
 
   img { margin: 0; }
   a, a:visited { line-height: inherit; }
@@ -111,6 +108,50 @@ li {
 // #Images
 img.scale { max-width: 100%; height: auto; }
 
+// #Buttons
+.btn {
+  position: relative;
+  display: inline-block;
+  padding: 15px 15px;
+
+  font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  font-size:15px; line-height:normal; font-weight: bold;
+  text-decoration: none; text-align: center;
+
+  background: #ddd;
+  background-image:-webkit-linear-gradient(top, #eee, #ddd);
+  background-image:linear-gradient(top, #eee, #ddd);
+  border-width: 1px;
+  border-color: #b4b4b4;
+
+  color: #333;
+  text-shadow: 0 1px 3px rgba(255,255,255,0.6);
+  box-shadow: 0 -1px 0 rgba(0,0,0,0.2) inset, 0 1px 0 rgba(255,255,255,0.2) inset;
+  cursor: pointer;
+
+  @include vendor-prefix(border-radius, 30px);
+
+  &:hover{ background:#eee; }
+  &:active { box-shadow: 0 0 0 rgba(0,0,0,0.6) inset; }
+}
+
+.btn-clear {
+  background: transparent;
+  border: 1px solid rgba(0,0,0,0.5);
+  text-shadow: none;
+  box-shadow: none;
+
+  &:hover {
+    border-color: rgba(255,255,255, 0.75);
+    color: #fff;
+  }
+
+  &.white {
+    border-color: rgba(255,255,255, 0.75);
+    color: #fff;
+  }
+}
+
 // #Forms
 form, fieldset {  margin-bottom: 20px; }
 input[type="text"], input[type="password"], input[type="email"],
@@ -154,6 +195,8 @@ label, legend {
 }
 
 input[type="checkbox"] { display: inline; }
+
+.form-action { padding: 15px 0; }
 
 // #Misc
 .remove-bottom { margin-bottom: 0 !important; }
