--- a/src/sass/lib/skeleton.scss
+++ b/src/sass/lib/skeleton.scss
@@ -1,12 +1,5 @@
-/*
-  Skeleton V1.2
-  Copyright 2011, Dave Gamache
-
-  Table of Contents
-  -----------------
-    Base 960 Grid
-*/
-
+// Skeleton V1.2.1 
+// Based on Dave Gamache's Skeleton with minor modifications
 .container {
   position: relative;
   width: 960px;
@@ -26,13 +19,11 @@
 }
 
 // Base 960 Grid
+// 16 column grid system
 .container {
   @extend .clearfix;
 
-  .one {
-    &.column, &.columns { width: 40px; }
-  }
-
+  .one.column, .one.columns { width: 40px; }
   .two.columns          { width: 100px; }
   .three.columns        { width: 160px; }
   .four.columns         { width: 220px; }
@@ -53,20 +44,19 @@
   .two-thirds.column    { width: 620px; }
 
   // Offets
-  .offset-by-one        { padding-left: 60px;  }
-  .offset-by-two        { padding-left: 120px; }
-  .offset-by-three      { padding-left: 180px; }
-  .offset-by-four       { padding-left: 240px; }
-  .offset-by-five       { padding-left: 300px; }
-  .offset-by-six        { padding-left: 360px; }
-  .offset-by-seven      { padding-left: 420px; }
-  .offset-by-eight      { padding-left: 480px; }
-  .offset-by-nine       { padding-left: 540px; }
-  .offset-by-ten        { padding-left: 600px; }
-  .offset-by-eleven     { padding-left: 660px; }
-  .offset-by-twelve     { padding-left: 720px; }
-  .offset-by-thirteen   { padding-left: 780px; }
-  .offset-by-fourteen   { padding-left: 840px; }
-  .offset-by-fifteen    { padding-left: 900px; }
+  .offset-by-one        { margin-left: 70px;  }
+  .offset-by-two        { margin-left: 130px; }
+  .offset-by-three      { margin-left: 190px; }
+  .offset-by-four       { margin-left: 250px; }
+  .offset-by-five       { margin-left: 310px; }
+  .offset-by-six        { margin-left: 370px; }
+  .offset-by-seven      { margin-left: 430px; }
+  .offset-by-eight      { margin-left: 490px; }
+  .offset-by-nine       { margin-left: 550px; }
+  .offset-by-ten        { margin-left: 610px; }
+  .offset-by-eleven     { margin-left: 670px; }
+  .offset-by-twelve     { margin-left: 730px; }
+  .offset-by-thirteen   { margin-left: 790px; }
+  .offset-by-fourteen   { margin-left: 850px; }
+  .offset-by-fifteen    { margin-left: 910px; }
 }
-
