--- a/src/sass/app/header.scss
+++ b/src/sass/app/header.scss
@@ -1,7 +1,7 @@
 #header {
   min-width: 960px;
   min-height: $header_h;
-  background: url("/assets/images/m1.jpg") center top no-repeat;
+  background: url("/assets/images/s0.jpg") center top no-repeat;
   background-attachment: fixed;
 
   @include vendor-prefix(background-size, "cover");
@@ -11,19 +11,23 @@
     min-height: $header_h;
   }
 
+  #sale { font-family: "Flood"}
+
   .overlay {
     position: absolute;
-    top: 0; left: 0; bottom: 0; right: 0; 
-    width: 100%; 
+    top: 0; left: 0; bottom: 0; right: 0;
+    width: 100%;
     min-height: $header_h;
 
-    background: rgba(0,0,0,0.5);
-    background-image:-webkit-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.75));
-    background-image: linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.75));
+    // background: rgba(0,0,0,0.5);
+
+    background-image: -webkit-linear-gradient(top, rgba(0,0,0,0) 50%, rgba(0,0,0,0.5) 75%, #000000 100%);
+
+    // background-image: linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.75));
   }
 
   #hero-copy {
-    position: absolute; 
+    position: absolute;
     bottom: 15%;
     color: #fff;
   }
