--- a/src/sass/lib/base.scss
+++ b/src/sass/lib/base.scss
@@ -13,7 +13,9 @@
 // #Basic Styles
 body {
   background: #fff;
-  font: 20px/1.6em  "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 20px/1.6em  "Arvo", "Georgia", "Times New Roman", serif;
+
+  // font: 20px/1.6em  "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #555;
 
   -webkit-font-smoothing: antialiased;
@@ -27,6 +29,11 @@ body {
 
 // #Typography
 h1, h2, h3, h4, h5, h6 {
+
+  &.sans-serif {
+    font-family: "Freight", Helvetica, Arial, sans-serif;
+  }
+
   color: #181818;
   a { font-weight: inherit; }
 }
@@ -53,7 +60,7 @@ p {
 
 em { font-style: italic; }
 strong { font-weight: bold; color: #333; }
-small { font-size: 80%; }
+small { font-size: 80%; line-height: 80%;}
 
 // #Blockquotes
 blockquote, blockquote p {
@@ -114,7 +121,9 @@ img.scale { max-width: 100%; height: auto; }
   display: inline-block;
   padding: 15px 15px;
 
-  font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  // font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  font-family: "Freight", "Helvetica", "Arial", sans-serif;
+
   font-size:15px; line-height:normal; font-weight: bold;
   text-decoration: none; text-align: center;
 
@@ -202,5 +211,3 @@ input[type="checkbox"] { display: inline; }
 .remove-bottom { margin-bottom: 0 !important; }
 .half-bottom { margin-bottom: 10px !important; }
 .add-bottom { margin-bottom: 20px !important; }
-
-
