--- a/src/sass/app/layout.scss
+++ b/src/sass/app/layout.scss
@@ -57,12 +57,8 @@ body.debug {
 #site {}
 
 #content {
-  top: $header_h;
+  height: 1024px;
   background: #f8f8f8;
-}
-
-#footer {
-  background: #000;
 }
 
 #mission {
