--- a/src/sass/lib/icons.scss
+++ b/src/sass/lib/icons.scss
@@ -51,3 +51,7 @@
 .ico-vimeo:before     { content: "\e619"; }
 .ico-facebook:before  { content: "\e61a"; }
 .ico-pinterest:before { content: "\e61b"; }
+
+.ico-visa {
+  background: url(data:image/svg;base64,) 0 0 no-repeat;
+}
