--- a/src/sass/lib/animation.scss
+++ b/src/sass/lib/animation.scss
@@ -2,32 +2,61 @@
   @include vendor-prefix(animation, "600ms ease-in-out both")
 }
 
-@-webkit-keyframes fade-in-down {
-  0% { opacity: 0; -webkit-transform: translateY(-100%); }
-  100% { opacity: 1; -webkit-transform: translateY(0); }
+@-webkit-keyframes slide-down {
+  0% { -webkit-transform: translateY(-100%); }
+  100% { -webkit-transform: translateY(0); }
 }
 
-@-moz-keyframes fade-in-down {
-  0% { opacity: 0; -moz-transform: translateY(-100%); }
-  100% { opacity: 1; -moz-transform: translateY(0); }
+@-moz-keyframes slide-down {
+  0% { -moz-transform: translateY(-100%); }
+  100% { -moz-transform: translateY(0); }
 }
 
-@-ms-keyframes fade-in-down {
-  0% { opacity: 0; -ms-transform: translateY(-100%); }
-  100% { opacity: 1; -ms-transform: translateY(0); }
+@-ms-keyframes slide-down {
+  0% { -ms-transform: translateY(-100%); }
+  100% { -ms-transform: translateY(0); }
 }
 
-@-o-keyframes fade-in-down {
-  0% { opacity: 0; -o-transform: translateY(-100%); }
-  100% { opacity: 1; -o-transform: translateY(0); }
+@-o-keyframes slide-down {
+  0% { -o-transform: translateY(-100%); }
+  100% { -o-transform: translateY(0); }
 }
 
-@keyframes fade-in-down {
-  0% { opacity: 0; transform: translateY(-100%); }
-  100% { opacity: 1; transform: translateY(0); }
+@keyframes slide-down {
+  0% { transform: translateY(-100%); }
+  100% { transform: translateY(0); }
 }
 
-.fade-in-down {
-  @include vendor-prefix(animation-name, "fade-in-down")
+.slide-down {
+  @include vendor-prefix(animation-name, "slide-down")
+}
+
+@-webkit-keyframes slide-up {
+  0% { -webkit-transform: translateY(0); }
+  100% { -webkit-transform: translateY(-100%); }
+}
+
+@-moz-keyframes slide--up {
+  0% { -moz-transform: translateY(0); }
+  100% { -moz-transform: translateY(-100%); }
+}
+
+@-ms-keyframes slide--up {
+  0% { -ms-transform: translateY(0); }
+  100% { -ms-transform: translateY(-100%); }
+}
+
+@-o-keyframes slide-up {
+  0% { -o-transform: translateY(0); }
+  100% { -o-transform: translateY(-100%); }
+}
+
+@keyframes slide-up {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(-100%); }
+}
+
+.slide-up {
+  @include vendor-prefix(animation-name, "slide-up")
 }
 
