--- a/src/sass/lib/base.scss
+++ b/src/sass/lib/base.scss
@@ -13,8 +13,7 @@
 // #Basic Styles
 body {
   background: #fff;
-  font: 19px/1.6em  "Arvo", "Georgia", "Times New Roman", serif;
-
+  font: 19px/1.6em  "Adelle", "Georgia", "Times New Roman", serif;
   // font: 20px/1.6em  "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #555;
 
@@ -29,6 +28,7 @@ body {
 
 // #Typography
 h1, h2, h3, h4, h5, h6 {
+  margin: 0 0 1.6em 0;
 
   &.sans-serif {
     font-family: "Freight", Helvetica, Arial, sans-serif;
