--- a/src/sass/lib/fonts.scss
+++ b/src/sass/lib/fonts.scss
@@ -1,27 +1,27 @@
 @font-face {
-  font-family: "Arvo";
-  src: url("/assets/fonts/Arvo.ttf");
+  font-family: "Adelle";
+  src: url("/assets/fonts/adelle.ttf");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Arvo";
-  src: url("/assets/fonts/Arvo-Italic.ttf");
+  font-family: "Adelle";
+  src: url("/assets/fonts/adelle-i.ttf");
   font-weight: normal;
   font-style: italic;
 }
 
 @font-face {
-  font-family: "Arvo";
-  src: url("/assets/fonts/Arvo-Bold.ttf");
+  font-family: "Adelle";
+  src: url("/assets/fonts/adelle-b.ttf");
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Arvo";
-  src: url("/assets/fonts/Arvo-BoldItalic.ttf");
+  font-family: "Adelle";
+  src: url("/assets/fonts/adelle-bi.ttf");
   font-weight: bold;
   font-style: italic;
 }
