--- a/src/sass/app/header.scss
+++ b/src/sass/app/header.scss
@@ -7,9 +7,9 @@
   #cover {
     position: absolute;
     width: 100%; height: 100%;
-    
+
     background-color: #111;
-    background-image: url("/assets/images/s4.jpg");
+    background-image: url("/assets/images/splash.jpg");
     background-position: center top;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -18,13 +18,14 @@
   }
 
   #overlay {
+    display: none;
     z-index: 2;
     position: absolute;
     width: 100%; height: 100%;
     background: rgba(234,89,0,0.5);
   }
 
-  #sale { 
+  #sale {
     font-family: "Flood";
     font-size: 60px;
     color: #fff;
@@ -33,8 +34,7 @@
   #hero-copy {
     z-index: 2;
     position: relative;
-    // background: blue;
-    top: 50%;
+    top: 40%;
     height: 100%;
   }
 
