--- a/src/sass/app_style_manifest.scss
+++ b/src/sass/app_style_manifest.scss
@@ -10,6 +10,7 @@
   "app/variables",
   "app/layout",
   "app/main_nav",
-  "app/header",
+  "app/hero",
   "app/store",
-  "app/footer";
+  "app/footer",
+  "app/cart";
