--- a/src/sass/app/main_nav.scss
+++ b/src/sass/app/main_nav.scss
@@ -3,7 +3,9 @@
   position: fixed;
   top: 0; left: 0; right: 0;
   background-color: #fff;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.2);
+  border-bottom: 1px solid #d9d9d9;
+  
+  @include vendor-prefix(box-shadow, "0 0 2px 0 rgba(0,0,0,0.5)");
 
   .container { position: relative; }
   .columns { padding: 15px 0;}
