--- a/src/sass/lib/animation.scss
+++ b/src/sass/lib/animation.scss
@@ -3,28 +3,28 @@
 }
 
 @-webkit-keyframes slide-down {
-  0% { -webkit-transform: translateY(-100%); }
-  100% { -webkit-transform: translateY(0); }
+  0% { -webkit-transform: translate3d(0, -100%, 0); }
+  100% { -webkit-transform: translate3d(0, 0, 0); }
 }
 
 @-moz-keyframes slide-down {
-  0% { -moz-transform: translateY(-100%); }
-  100% { -moz-transform: translateY(0); }
+  0% { -moz-transform: translate3d(0, -100%, 0); }
+  100% { -moz-transform: translate3d(0, 0, 0); }
 }
 
 @-ms-keyframes slide-down {
-  0% { -ms-transform: translateY(-100%); }
-  100% { -ms-transform: translateY(0); }
+  0% { -ms-transform: translate3d(0, -100%, 0); }
+  100% { -ms-transform: translate3d(0,0,0); }
 }
 
 @-o-keyframes slide-down {
-  0% { -o-transform: translateY(-100%); }
-  100% { -o-transform: translateY(0); }
+  0% { -o-transform: translate3d(0, -100%, 0); }
+  100% { -o-transform: translate3d(0,0,0); }
 }
 
 @keyframes slide-down {
-  0% { transform: translateY(-100%); }
-  100% { transform: translateY(0); }
+  0% { transform: translate3d(0, -100%, 0); }
+  100% { transform: translate3d(0,0,0); }
 }
 
 .slide-down {
@@ -59,4 +59,3 @@
 .slide-up {
   @include vendor-prefix(animation-name, "slide-up")
 }
-
