--- a/src/sass/app_style_manifest.scss
+++ b/src/sass/app_style_manifest.scss
@@ -9,8 +9,4 @@
 
   "app/variables",
   "app/layout",
-  "app/main_nav",
-  "app/hero",
-  "app/store",
-  "app/footer",
-  "app/cart";
+  "app/hero";
