--- a/src/sass/lib/base.scss
+++ b/src/sass/lib/base.scss
@@ -12,9 +12,9 @@
 
 // #Basic Styles
 body {
-  background: #fff;
-  font: 18px/1.6em  "Adelle", "Georgia", "Times New Roman", serif;
-  // font: 20px/1.6em  "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background: #E9D9C4;
+  // font: 18px/1.6em  "Adelle", "Georgia", "Times New Roman", serif;
+  font: 18px/1.6em  "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #555;
 
   -webkit-font-smoothing: antialiased;
@@ -31,7 +31,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0 0 1.6em 0;
 
   &.sans-serif {
-    font-family: "Freight", Helvetica, Arial, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
   }
 
   color: #181818;
