--- a/src/sass/lib/fonts.scss
+++ b/src/sass/lib/fonts.scss
@@ -1,47 +1,26 @@
 @font-face {
-  font-family: "Adelle";
-  src: url("/assets/fonts/adelle.ttf");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Adelle";
-  src: url("/assets/fonts/adelle-i.ttf");
+  font-family: "Montserrat";
+  src: url("/assets/fonts/Montserrat-Regular.ttf");
   font-weight: normal;
   font-style: italic;
 }
 
 @font-face {
-  font-family: "Adelle";
-  src: url("/assets/fonts/adelle-b.ttf");
+  font-family: "Montserrat";
+  src: url("/assets/fonts/Montserrat-Bold.ttf");
   font-weight: bold;
   font-style: normal;
-}
-
-@font-face {
-  font-family: "Adelle";
-  src: url("/assets/fonts/adelle-bi.ttf");
-  font-weight: bold;
-  font-style: italic;
 }
 
 // San-serif
 @font-face {
-  font-family: "Freight";
-  src: url("/assets/fonts/freight.ttf");
+  font-family: "OpenSans";
+  src: url("/assets/fonts/OpenSans-Regular.ttf");
   font-weight: normal;
 }
 
 @font-face {
-  font-family: "Freight";
-  src: url("/assets/fonts/freight-b.ttf");
+  font-family: "OpenSans";
+  src: url("/assets/fonts/OpenSans-Bold.ttf");
   font-weight: bold;
-}
-
-
-// Promo & Modifiers?
-@font-face {
-  font-family: "Flood";
-  src: url("/assets/fonts/flood.ttf");
 }
