--- a/src/sass/lib/base.scss
+++ b/src/sass/lib/base.scss
@@ -13,8 +13,7 @@
 // #Basic Styles
 body {
   background: #fff;
-  font: 18px/1.6em  "Adelle", "Georgia", "Times New Roman", serif;
-  // font: 20px/1.6em  "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 20px/1.6em  "OpenSans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #555;
 
   -webkit-font-smoothing: antialiased;
@@ -30,11 +29,6 @@ body {
 h1, h2, h3, h4, h5, h6 {
   margin: 0 0 1.6em 0;
 
-  &.sans-serif {
-    font-family: "Freight", Helvetica, Arial, sans-serif;
-  }
-
-  color: #181818;
   a { font-weight: inherit; }
 }
 
@@ -44,6 +38,14 @@ h3 { font-size: 28px; line-height: 34px; margin-bottom: 8px; }
 h4 { font-size: 21px; line-height: 30px; margin-bottom: 4px; }
 h5 { font-size: 17px; line-height: 24px; }
 h6 { font-size: 14px; line-height: 21px; }
+
+
+.title {
+  font-family: "Montserrat", Helvetica, Arial, sans-serif;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #1E7446;
+}
 
 .subheader { color: #777; }
 
@@ -119,46 +121,26 @@ img.scale { max-width: 100%; height: auto; }
 .btn {
   position: relative;
   display: inline-block;
-  padding: 15px 15px;
+  padding: 15px 30px;
 
-  // font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-  font-family: "Freight", "Helvetica", "Arial", sans-serif;
+  font-family: "OpenSans", "Helvetica", "Arial", sans-serif;
 
-  font-size:15px; line-height:normal; font-weight: bold;
+  font-size: 18px; line-height:normal; font-weight: bold;
   text-decoration: none; text-align: center;
 
   background: #ddd;
-  background-image:-webkit-linear-gradient(top, #eee, #ddd);
-  background-image:linear-gradient(top, #eee, #ddd);
-  border-width: 1px;
-  border-color: #b4b4b4;
+  border-bottom: 5px solid #ddd;
 
   color: #333;
-  text-shadow: 0 1px 3px rgba(255,255,255,0.6);
-  box-shadow: 0 -1px 0 rgba(0,0,0,0.2) inset, 0 1px 0 rgba(255,255,255,0.2) inset;
   cursor: pointer;
 
-  @include vendor-prefix(border-radius, 30px);
+  @include vendor-prefix(transition, "all 300ms");
 
-  &:hover{ background:#eee; }
+  &:hover{
+    background:#eee;
+    border-bottom: 5px solid #fff;
+  }
   &:active { box-shadow: 0 0 0 rgba(0,0,0,0.6) inset; }
-}
-
-.btn-clear {
-  background: transparent;
-  border: 1px solid rgba(0,0,0,0.5);
-  text-shadow: none;
-  box-shadow: none;
-
-  &:hover {
-    border-color: rgba(255,255,255, 0.75);
-    color: #fff;
-  }
-
-  &.white {
-    border-color: rgba(255,255,255, 0.75);
-    color: #fff;
-  }
 }
 
 // #Forms
@@ -172,7 +154,7 @@ textarea, select {
   padding: 6px 4px;
   outline: none;
 
-  font: 15px/24px "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 15px/24px "OpenSans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #777;
 
   background: #fff;
